# kafka-test

./: .gitignore  Dockerfile  docker-compose.yml  gitignore  pyproject.toml
app/: consumer.py  enqueue_json.py  producer.py
app/storage/: test_data.json
tests/: test_consumer.py  test_enqueue_json.py  test_producer.py  test_storage.py
